# OTA_agent

./: .auto-changelog  .gitignore  .gitlab-ci.yml  .release-it.json  Cargo.toml  Makefile  README.md  package.json
docker/: Dockerfile  Dockerfile_GDB_SSH  agent.yaml
e2e/: main.py  readme.md  requirements.txt  rest_server.py  tools.py  windows.py
e2e/artifacts/: download_artifacts.sh
e2e/linux/: snapd_comm.py  test_base.py
ps1/: setup_wsl2.ps1
scripts/: build.bat  build.sh  collect_and_upload_artifacts.sh  install_build_dependencies.sh  make.sh  register_tag.bat  startup.bat
snap/: Makefile  generate_yaml.py
snap/templates/: snapcraft_template.yaml
src/: config.rs  config_watcher.rs  lib.rs  service_trait.rs
src/auth/: auth_manager.rs  file_auth.rs  license_manager.rs  license_manager_trait.rs  mod.rs
src/logger/: logging_configuration.rs  mod.rs  phantom_file_logger.rs
src/ota/: deb_installer.rs  disk_space_verifier.rs  download_manager.rs  file_system.rs  hardcoded_manifest.rs  install_manager.rs  manifest.rs  mod.rs  msi_installer.rs  ota_error.rs  ota_manager.rs  ota_status.rs  rest_listener.rs  service_control_trait.rs  snap_installer.rs  system_ctl.rs  tar_installer.rs  version_table.rs  windows_installer.rs  windows_service_control.rs
src/resources/: mod.rs  resource_manager.rs  scheduled_task.xml
src/rest_comm/: artifactory_comm.rs  core_rest_comm.rs  core_rest_comm_trait.rs  coupling_rest_comm.rs  coupling_submit_trait.rs  jira_log_submitter.rs  mod.rs
src/rest_request/: mod.rs
src/ui/: index.html  mod.rs  progress_ui.rs  script.js  styles.css  system_tray.rs  tail_logs.ps1
wix/: main.wxs
(+11 files in other folders)
