[package]
name = "phantom_agent"
version = "1.9.4"
edition = "2021"
authors = ["Phantom Auto"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde_repr = "0.1"
ipnet = "2.3.1"
serde = { version = "1.0", features = ["derive"] }
colored = "2"
url = { version = "2.2.2",  features = ["serde"] }
reqwest = {version = "0.11",  features = ["blocking", "stream", "multipart"] }
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3.14"
regex = "1.4"

futures = "0.3"
base64 = "0.21"
sha2 = "0.10"
hmac-sha1 = "0.1"
sysinfo = "0.28"
rust-crypto = "0.2"
mockall="0.11"
config = "0.13"
time = { version = "0.3", features = ["serde-human-readable"] }
encoding_rs = "0.8"
encoding_rs_io = "0.1"
zip =  { version = "0.6", default-features = false }
phf = { version = "0.11", features = ["macros"] }
tokio-tungstenite = "0.18"
tungstenite = "0.18"
chrono = "0.4.31"
log = "0.4.17"
spdlog-rs = {version = "0.3.10", features = ["source-location", "log"]}
notify = "5.1.0"
version-compare = "0.1.1"
open = "4.1.0"
thread-id = "4.1.0"
single-instance = "0.3.3"



[target.'cfg(windows)'.dependencies]
windows = { version = "0.44", features = ["Win32_System_SystemInformation", "Win32_Foundation"] }
windows-service = "0.5"
path-slash = "0.2"
winreg = "0.11"
msi = "0.5.0"
ntp = "0.5"
image = "0.24.6"
tray-icon = "0.5.1"
winit = "0.28.6"




[dev-dependencies]
wiremock = "0.5"

[build-dependencies]
build-data = "0.1.3"
